@@ -14,10 +14,12 @@
 
 	<properties>
 		<spray-ci-targetrepository>https://spray.ci.cloudbees.com/job/spray-ci-targetplatform/lastSuccessfulBuild/artifact/releng/org.eclipselabs.spray.repository/target/repository/</spray-ci-targetrepository>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+		<spray-local-targetrepository>file:../../releng/org.eclipselabs.spray.repository/target/repository</spray-local-targetrepository>
+		<project.encoding>UTF-8</project.encoding>
+		<file.encoding>${project.encoding}</file.encoding>
+		<project.build.sourceEncoding>${project.encoding}</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>${project.encoding}</project.reporting.outputEncoding>
 		<tycho-version>0.18.0</tycho-version>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven-resources-plugin.version>2.6</maven-resources-plugin.version>
 		<maven-antrun-plugin.version>1.7</maven-antrun-plugin.version>
 		<maven-deploy-plugin.version>2.7</maven-deploy-plugin.version>
@@ -31,6 +33,7 @@
 		<maven-checkstyle-plugin.version>2.10</maven-checkstyle-plugin.version>
 		<findbugs-maven-plugin.version>2.5.2</findbugs-maven-plugin.version>
 		<maven-pmd-plugin.version>3.0.1</maven-pmd-plugin.version>
+		<maven-jxr-plugin.version>2.3</maven-jxr-plugin.version>
 		<build-helper-maven-plugin.version>1.8</build-helper-maven-plugin.version>
 		<eclipse-signing-maven-plugin.version>1.0.5</eclipse-signing-maven-plugin.version>
 		<fornax-oaw-m2-plugin.version>3.4.0</fornax-oaw-m2-plugin.version>
@@ -39,6 +42,7 @@
 		<jacoco-maven-plugin.version>0.6.3.201306030806</jacoco-maven-plugin.version>
 		<junit-version>4.11</junit-version>
 		<local-build-platform.version>[3.9,4.4)</local-build-platform.version>
+		<encodingArgs>-Dfile.encoding=${file.encoding}</encodingArgs>
 		<ui.test.vmargs></ui.test.vmargs>
 		<coverageAgent></coverageAgent>
 		<it.coverage.argLine></it.coverage.argLine>
@@ -149,7 +153,7 @@
 					<configuration>
 						<useUIHarness>false</useUIHarness>
 						<useUIThread>false</useUIThread>
-						<argLine>${ui.test.vmargs}</argLine><!-- different for mac/not mac -->
+						<argLine>${encodingArgs} ${ui.test.vmargs} ${coverageAgent}</argLine><!-- different for mac/not mac -->
 					</configuration>
 				</plugin>
 				<plugin>
@@ -200,6 +204,9 @@
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-surefire-plugin</artifactId>
 					<version>${maven-surefire-plugin.version}</version>
+					<configuration>
+						<argLine>${coverageAgent}</argLine>
+					</configuration>
 				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
@@ -245,7 +252,7 @@
 					<configuration>
 						<findbugsXmlOutput>true</findbugsXmlOutput>
 						<failOnError>false</failOnError>
-						<excludeFilterFile>findbugs-exclude.xml</excludeFilterFile>
+						<excludeFilterFile>${session.executionRootDirectory}/../org.eclipselabs.spray.parent/findbugs-exclude.xml</excludeFilterFile>
 					</configuration>
 					<executions>
 						<execution>
@@ -260,8 +267,10 @@
 					<artifactId>maven-pmd-plugin</artifactId>
 					<version>${maven-pmd-plugin.version}</version>
 					<configuration>
-						<excludes>**BusinessDomainDsl**,**org/eclipse.**,**/internal/**,**antlr**:**/parseTree**:**Abstract**RuntimeModule**,**SetupGenerated**,**Abstract**Validator**,
-							**GrammarAccess**,**Abstract**UiModule**,**Abstract**ProposalProvider**,**/mm/**,**/shapes/shapes/**,**/styles/styles/**:**Abstract**SemanticSequencer**</excludes>
+						<excludeRoots>
+							<excludeRoot>src-gen</excludeRoot>
+							<excludeRoot>xtend-gen</excludeRoot>
+						</excludeRoots>							
 					</configuration>
 				</plugin>
 				<plugin>
@@ -357,6 +366,18 @@
 			</snapshots>
 		</pluginRepository>
 	</pluginRepositories>
+	
+	<!-- to resolve this warning "[WARNING] Unable to locate Source XRef to 
+		link to - DISABLED". With this warning PMD validation will work fine. -->
+	<reporting>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jxr-plugin</artifactId>
+				<version>${maven-jxr-plugin.version}</version>
+			</plugin>
+		</plugins>
+	</reporting>	
 
 	<profiles>
 		<profile>
@@ -370,7 +391,7 @@
 				<repository>
 					<id>spray-dependencies</id>
 					<layout>p2</layout>
-					<url>file:../../releng/org.eclipselabs.spray.repository/target/repository</url>
+					<url>${spray-local-targetrepository}</url>
 				</repository>
 			</repositories>
 		</profile>
@@ -424,7 +445,7 @@
 				</os>
 			</activation>
 			<properties>
-				<ui.test.vmargs>-Xmx512m -XX:MaxPermSize=256m -XstartOnFirstThread</ui.test.vmargs>
+				<ui.test.vmargs>-Xmx1024m -XX:PermSize=256m -XX:MaxPermSize=256m -XstartOnFirstThread</ui.test.vmargs>
 			</properties>
 		</profile>
 		<profile>
@@ -436,7 +457,7 @@
 				</os>
 			</activation>
 			<properties>
-				<ui.test.vmargs>-Xmx512m -XX:MaxPermSize=256m</ui.test.vmargs>
+				<ui.test.vmargs>-Xmx1024m -XX:PermSize=256m -XX:MaxPermSize=256m</ui.test.vmargs>
 			</properties>
 		</profile>
 		<profile>
@@ -481,9 +502,10 @@
 		<profile>
 			<id>codeCoverage</id>
 			<properties>
+				<jacoco.propertyName>coverageAgent</jacoco.propertyName>
 				<jacoco.append>true</jacoco.append>
-				<jacoco.destFile>${project.basedir}/../../releng/org.eclipselabs.spray.parent/target/jacoco.exec</jacoco.destFile>
-				<jacoco.it.destFile>${project.basedir}/../../releng/org.eclipselabs.spray.parent/target/jacoco_it.exec</jacoco.it.destFile>
+				<jacoco.destFile>${session.executionRootDirectory}/../org.eclipselabs.spray.parent/target/jacoco.exec</jacoco.destFile>
+				<jacoco.it.destFile>${session.executionRootDirectory}/../org.eclipselabs.spray.parent/target/jacoco_it.exec</jacoco.it.destFile>
 				<!--jacoco.sessionId>junit4runnerSession</jacoco.sessionId -->
 				<!--jacoco.dumpOnExit>true</jacoco.dumpOnExit -->
 				<!--jacoco.output>file</jacoco.output -->
